created xception modded model

--- a/model/Preprocessing/preprocessing.ipynb
+++ b/model/Preprocessing/preprocessing.ipynb
@@ -133,8 +133,8 @@
     "import shutil\n",
     "\n",
     "# Define the directory containing the class folders\n",
-    "base_dir = r\"C:\\Users\\Ven\\Desktop\\Leaflet Data 2023\\data exp\"\n",
-    "output_dir = r\"C:\\Users\\Ven\\Desktop\\Leaflet-CNN-Sequential\\model\\data\\Dataset tl(14 classes 225 x 300)\"\n",
+    "base_dir = r\"C:\\Users\\Ven\\Desktop\\CashCF Data\"\n",
+    "output_dir = r\"C:\\Users\\Ven\\Desktop\\Cash-Counterfeat\\model\\data\"\n",
     "\n",
     "# Get the list of subdirectories (class names)\n",
     "class_names = [d for d in os.listdir(base_dir) if os.path.isdir(os.path.join(base_dir, d))]\n",
@@ -143,7 +143,7 @@
     "os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
     "# Define the size to which you want to resize the images\n",
-    "target_size = (225, 300)\n",
+    "target_size = (400, 300)\n",
     "\n",
     "# Iterate through each class folder and perform train-test split\n",
     "for class_name in class_names:\n",
