trained mobnetv2 model

--- a/model/vgg16_transfer_learning.ipynb
+++ b/model/vgg16_transfer_learning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -573,6 +573,123 @@
     "\n",
     "weights_path = r\"C:\\Users\\Ven\\Desktop\\CashCF Data\\models\\categorical\\vgg 16 (1000 imgs)\\model.weights.hdf5\"\n",
     "model_vgg16.save_weights(weights_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " input_1 (InputLayer)        [(None, 300, 400, 3)]     0         \n",
+      "                                                                 \n",
+      " block1_conv1 (Conv2D)       (None, 300, 400, 64)      1792      \n",
+      "                                                                 \n",
+      " block1_conv2 (Conv2D)       (None, 300, 400, 64)      36928     \n",
+      "                                                                 \n",
+      " block1_pool (MaxPooling2D)  (None, 150, 200, 64)      0         \n",
+      "                                                                 \n",
+      " block2_conv1 (Conv2D)       (None, 150, 200, 128)     73856     \n",
+      "                                                                 \n",
+      " block2_conv2 (Conv2D)       (None, 150, 200, 128)     147584    \n",
+      "                                                                 \n",
+      " block2_pool (MaxPooling2D)  (None, 75, 100, 128)      0         \n",
+      "                                                                 \n",
+      " block3_conv1 (Conv2D)       (None, 75, 100, 256)      295168    \n",
+      "                                                                 \n",
+      " block3_conv2 (Conv2D)       (None, 75, 100, 256)      590080    \n",
+      "                                                                 \n",
+      " block3_conv3 (Conv2D)       (None, 75, 100, 256)      590080    \n",
+      "                                                                 \n",
+      " block3_pool (MaxPooling2D)  (None, 37, 50, 256)       0         \n",
+      "                                                                 \n",
+      " block4_conv1 (Conv2D)       (None, 37, 50, 512)       1180160   \n",
+      "                                                                 \n",
+      " block4_conv2 (Conv2D)       (None, 37, 50, 512)       2359808   \n",
+      "                                                                 \n",
+      " block4_conv3 (Conv2D)       (None, 37, 50, 512)       2359808   \n",
+      "                                                                 \n",
+      " block4_pool (MaxPooling2D)  (None, 18, 25, 512)       0         \n",
+      "                                                                 \n",
+      " block5_conv1 (Conv2D)       (None, 18, 25, 512)       2359808   \n",
+      "                                                                 \n",
+      " block5_conv2 (Conv2D)       (None, 18, 25, 512)       2359808   \n",
+      "                                                                 \n",
+      " block5_conv3 (Conv2D)       (None, 18, 25, 512)       2359808   \n",
+      "                                                                 \n",
+      " block5_pool (MaxPooling2D)  (None, 9, 12, 512)        0         \n",
+      "                                                                 \n",
+      " flatten (Flatten)           (None, 55296)             0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 4)                 221188    \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 14,935,876\n",
+      "Trainable params: 221,188\n",
+      "Non-trainable params: 14,714,688\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "# from tensorflow.keras.models import model_from_json\n",
+    "# # Load model architecture from JSON file\n",
+    "# model_path = r\"C:\\Users\\Ven\\Desktop\\CashCF Data\\models\\categorical\\vgg 16 (1000 imgs)\\model.json\"\n",
+    "# with open(model_path, 'r') as json_file:\n",
+    "#     loaded_model_json = json_file.read()\n",
+    "# model_vgg16 = model_from_json(loaded_model_json)\n",
+    "\n",
+    "# # Load model weights\n",
+    "# weights_path = r\"C:\\Users\\Ven\\Desktop\\CashCF Data\\models\\categorical\\vgg 16 (1000 imgs)\\model.weights.hdf5\"\n",
+    "# model_vgg16.load_weights(weights_path)\n",
+    "\n",
+    "# model_vgg16.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 5 of 13). These functions will not be directly callable after loading.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: C:\\Users\\Ven\\AppData\\Local\\Temp\\tmpm1f4hghu\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: C:\\Users\\Ven\\AppData\\Local\\Temp\\tmpm1f4hghu\\assets\n"
+     ]
+    }
+   ],
+   "source": [
+    "# # Save the model to TensorFlow Lite format\n",
+    "# converter = tf.lite.TFLiteConverter.from_keras_model(model_vgg16)\n",
+    "# converter.optimization = [tf.lite.Optimize.DEFAULT]\n",
+    "# tflite_model = converter.convert()\n",
+    "\n",
+    "# # Save the TFLite model to a file\n",
+    "# tflite_model_path = r\"C:\\Users\\Ven\\Desktop\\CashCF Data\\models\\categorical\\vgg 16 (1000 imgs)\\tflite\\compressed_model.tflite\"\n",
+    "# with open(tflite_model_path, 'wb') as f:\n",
+    "#     f.write(tflite_model)"
    ]
   },
   {
